Add mathematical operations to chorus context, improve type coercion when specified value overflows Double or Long